Next release
============

* ENH: Provides a Nipype wrapper for ANTs DenoiseImage (https://github.com/nipy/nipype/pull/1291)
* FIX: Minor bugfix logging hash differences (https://github.com/nipy/nipype/pull/1298)
* FIX: Use released Prov python library (https://github.com/nipy/nipype/pull/1279)
* ENH: Support for Python 3 (https://github.com/nipy/nipype/pull/1221)
* FIX: VTK version check missing when using tvtk (https://github.com/nipy/nipype/pull/1219)
* ENH: Added an OAR scheduler plugin (https://github.com/nipy/nipype/pull/1259)
* ENH: New ANTs interface: antsBrainExtraction (https://github.com/nipy/nipype/pull/1231)
* API: Default model level for the bedpostx workflow has been set to "2" following FSL 5.0.9 lead
* ENH: New interfaces for interacting with AWS S3: S3DataSink and S3DataGrabber (https://github.com/nipy/nipype/pull/1201)
* ENH: Interfaces for MINC tools (https://github.com/nipy/nipype/pull/1304)

Release 0.11.0 (September 15, 2015)
============

* API: Change how hash values are computed (https://github.com/nipy/nipype/pull/1174)
* ENH: New algorithm: mesh.WarpPoints applies displacements fields to point sets
       (https://github.com/nipy/nipype/pull/889).
* ENH: New interfaces for MRTrix3 (https://github.com/nipy/nipype/pull/1126)
* ENH: New option in afni.3dRefit - zdel, ydel, zdel etc. (https://github.com/nipy/nipype/pull/1079)
* FIX: ants.Registration composite transform outputs are no longer returned as lists (https://github.com/nipy/nipype/pull/1183)
* BUG: ANTs Registration interface failed with multi-modal inputs
    (https://github.com/nipy/nipype/pull/1176) (https://github.com/nipy/nipype/issues/1175)
* ENH: dipy.TrackDensityMap interface now accepts a reference image (https://github.com/nipy/nipype/pull/1091)
* FIX: Bug in XFibres5 (https://github.com/nipy/nipype/pull/1168)
* ENH: Attempt to use hard links for data sink.
    (https://github.com/nipy/nipype/pull/1161)
* FIX: Updates to SGE Plugins