@@ -1,0 +1,35 @@
+# AUTO-GENERATED by tools/checkspecs.py - DO NOT EDIT
+from ...testing import assert_equal
+from ..metrics import ErrorMap
+
+
+def test_ErrorMap_inputs():
+    input_map = dict(ignore_exception=dict(nohash=True,
+    usedefault=True,
+    ),
+    in_ref=dict(mandatory=True,
+    ),
+    in_tst=dict(mandatory=True,
+    ),
+    mask=dict(),
+    metric=dict(mandatory=True,
+    usedefault=True,
+    ),
+    out_map=dict(),
+    )
+    inputs = ErrorMap.input_spec()
+
+    for key, metadata in list(input_map.items()):
+        for metakey, value in list(metadata.items()):
+            yield assert_equal, getattr(inputs.traits()[key], metakey), value
+
+
+def test_ErrorMap_outputs():
+    output_map = dict(distance=dict(),
+    out_map=dict(),
+    )
+    outputs = ErrorMap.output_spec()
+
+    for key, metadata in list(output_map.items()):
+        for metakey, value in list(metadata.items()):
+            yield assert_equal, getattr(outputs.traits()[key], metakey), value
