@@ -54,6 +54,9 @@ def test_BRAINSABC_inputs():
     medianFilterSize=dict(argstr='--medianFilterSize %s',
     sep=',',
     ),
+    numberOfSubSamplesInEachPlugArea=dict(argstr='--numberOfSubSamplesInEachPlugArea %s',
+    sep=',',
+    ),
     numberOfThreads=dict(argstr='--numberOfThreads %d',
     ),
     outputDir=dict(argstr='--outputDir %s',
@@ -71,6 +74,8 @@ def test_BRAINSABC_inputs():
     hash_files=False,
     ),
     posteriorTemplate=dict(argstr='--posteriorTemplate %s',
+    ),
+    purePlugsThreshold=dict(argstr='--purePlugsThreshold %f',
     ),
     restoreState=dict(argstr='--restoreState %s',
     ),
